<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_news"
            android:icon="@drawable/ic_news_black"
            android:title="@string/main_nav_news" />
        <item
            android:id="@+id/nav_events"
            android:icon="@drawable/ic_event_black"
            android:title="@string/main_nav_events" />
        <!--<item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/main_nav_settings" />-->
    </group>

    <item android:title="@string/main_nav_comm">
        <menu>
            <!--<item
                android:id="@+id/nav_help"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/main_nav_help" />-->
            <item
                android:id="@+id/nav_contact_us"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/main_nav_contact" />
        </menu>
    </item>

</menu>
