<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.sacredheartcolaba.app.main_fragment.MainFragment">

    <ScrollView
        android:id="@+id/main_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:paddingBottom="8dp"
        android:paddingEnd="12dp"
        android:paddingStart="12dp"
        android:paddingTop="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/activity_vertical_margin"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    app:cardBackgroundColor="@color/white"
                    app:cardCornerRadius="2dp"
                    app:cardElevation="1dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="?actionBarSize"
                        android:orientation="vertical"
                        android:padding="16dp">

                        <TextView
                            android:id="@+id/quote_text"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center_horizontal"
                            android:text="@string/dummy_quote_text"
                            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
                            android:textSize="@dimen/text_size_medium" />

                        <TextView
                            android:id="@+id/quote_verse"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="end"
                            android:text="@string/dummy_quote_verse"
                            android:textSize="@dimen/text_size_small" />
                    </LinearLayout>
                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="?actionBarSize"
                    android:layout_marginBottom="@dimen/activity_vertical_margin"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    app:cardBackgroundColor="@color/colorPrimary"
                    app:cardCornerRadius="2dp"
                    app:cardElevation="2dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:paddingBottom="@dimen/activity_vertical_margin"
                        android:paddingEnd="@dimen/activity_horizontal_margin"
                        android:paddingStart="@dimen/activity_horizontal_margin"
                        android:paddingTop="@dimen/activity_vertical_margin"
                        android:text="@string/quote_of_the_day"
                        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Small"
                        android:textColor="@color/white"
                        android:textSize="@dimen/text_size_large"
                        android:textStyle="" />
                </android.support.v7.widget.CardView>

            </FrameLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/activity_vertical_margin"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    app:cardBackgroundColor="@color/white"
                    app:cardCornerRadius="2dp"
                    app:cardElevation="1dp">

                    <TextView
                        android:id="@+id/saint_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="?actionBarSize"
                        android:gravity="center"
                        android:padding="16dp"
                        android:text="@string/dummy_saint_name"
                        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
                        android:textSize="@dimen/text_size_large" />

                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="?actionBarSize"
                    android:layout_marginBottom="@dimen/activity_vertical_margin"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    app:cardBackgroundColor="@color/colorPrimary"
                    app:cardCornerRadius="2dp"
                    app:cardElevation="2dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:paddingBottom="@dimen/activity_vertical_margin"
                        android:paddingEnd="@dimen/activity_horizontal_margin"
                        android:paddingStart="@dimen/activity_horizontal_margin"
                        android:paddingTop="@dimen/activity_vertical_margin"
                        android:text="@string/saint_of_the_day"
                        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
                        android:textColor="@color/white"
                        android:textSize="@dimen/text_size_large" />

                </android.support.v7.widget.CardView>
            </FrameLayout>
        </LinearLayout>

    </ScrollView>

    <com.google.android.gms.ads.AdView
        android:id="@+id/main_adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        app:adSize="BANNER"
        app:adUnitId="@string/banner_ad_unit_id" />

    <LinearLayout
        android:id="@+id/main_button_bar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@color/colorAccent"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:onClick="openNews"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:drawableLeft="@drawable/ic_news"
                android:drawableStart="@drawable/ic_news"
                android:gravity="center"
                android:padding="@dimen/text_drawable_padding"
                android:text="@string/main_nav_news"
                android:textAllCaps="true"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
                android:textColor="@android:color/white"
                android:textSize="@dimen/text_size_button" />
        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginBottom="6dp"
            android:layout_marginTop="6dp"
            android:background="@color/colorDivider" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:onClick="openEvents"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:drawableLeft="@drawable/ic_event"
                android:drawableStart="@drawable/ic_event"
                android:gravity="center"
                android:padding="@dimen/text_drawable_padding"
                android:text="@string/main_nav_events"
                android:textAllCaps="true"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
                android:textColor="@android:color/white"
                android:textSize="@dimen/text_size_button" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
